--- a/驾照轻松考/UIChooseAnswerTableViewCell.xib
+++ b/驾照轻松考/UIChooseAnswerTableViewCell.xib
@@ -8,44 +8,40 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AnswerCell" rowHeight="44" id="KGk-i7-Jjw" customClass="UIChooseAnswerTableViewCell" customModule="驾照轻松考" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="440" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="440" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o30-2V-eZb">
-                        <rect key="frame" x="8" y="8" width="34" height="27.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="答案" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bX0-cN-1Da">
+                        <rect key="frame" x="20" y="11" width="376" height="21"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                        <color key="textColor" red="0.16078431369999999" green="0.61568627450000002" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dGt-Nm-nAs">
+                        <rect key="frame" x="398" y="2" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="JOo-88-EfD"/>
+                            <constraint firstAttribute="width" constant="40" id="dcz-0Y-EK3"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="A." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o30-2V-eZb">
+                        <rect key="frame" x="2" y="11" width="16" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.12549019610000001" green="0.5568627451" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bX0-cN-1Da">
-                        <rect key="frame" x="50" y="8" width="262" height="27.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dGt-Nm-nAs">
-                        <rect key="frame" x="8" y="5" width="34" height="34"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="34" id="oa4-CH-gPG"/>
-                            <constraint firstAttribute="height" constant="34" id="qGV-Lv-AkL"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="dGt-Nm-nAs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="7VE-t4-QUM"/>
-                    <constraint firstAttribute="bottom" secondItem="o30-2V-eZb" secondAttribute="bottom" constant="8" id="CVK-Xe-Jtz"/>
-                    <constraint firstItem="dGt-Nm-nAs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="KWW-Cf-QOl"/>
-                    <constraint firstAttribute="trailing" secondItem="bX0-cN-1Da" secondAttribute="trailing" constant="8" id="L9w-m1-f8N"/>
-                    <constraint firstItem="bX0-cN-1Da" firstAttribute="leading" secondItem="o30-2V-eZb" secondAttribute="trailing" constant="8" id="M8g-9X-VFw"/>
-                    <constraint firstItem="bX0-cN-1Da" firstAttribute="leading" secondItem="dGt-Nm-nAs" secondAttribute="trailing" constant="8" id="Ppb-vK-kM3"/>
-                    <constraint firstItem="o30-2V-eZb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Slw-uP-Twm"/>
-                    <constraint firstItem="o30-2V-eZb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="YFZ-hK-OaB"/>
-                    <constraint firstAttribute="bottom" secondItem="dGt-Nm-nAs" secondAttribute="bottom" constant="4.5" id="a5e-yc-JXT"/>
-                    <constraint firstAttribute="bottom" secondItem="bX0-cN-1Da" secondAttribute="bottom" constant="8" id="oQJ-6u-VSQ"/>
-                    <constraint firstItem="bX0-cN-1Da" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="qrw-yv-iO6"/>
+                    <constraint firstItem="o30-2V-eZb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="EoV-oq-6uE"/>
+                    <constraint firstItem="bX0-cN-1Da" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="OuK-ns-ETA"/>
+                    <constraint firstItem="o30-2V-eZb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="2" id="Rmk-C8-U5r"/>
+                    <constraint firstItem="dGt-Nm-nAs" firstAttribute="leading" secondItem="bX0-cN-1Da" secondAttribute="trailing" constant="2" id="SIl-EF-kRR"/>
+                    <constraint firstItem="dGt-Nm-nAs" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="bOz-aU-f6i"/>
+                    <constraint firstItem="bX0-cN-1Da" firstAttribute="leading" secondItem="o30-2V-eZb" secondAttribute="trailing" constant="2" id="oM5-eq-quI"/>
+                    <constraint firstAttribute="trailing" secondItem="dGt-Nm-nAs" secondAttribute="trailing" constant="2" id="yup-mc-6uZ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -53,7 +49,7 @@
                 <outlet property="answerStatusImage" destination="dGt-Nm-nAs" id="j6V-GI-MFA"/>
                 <outlet property="title" destination="o30-2V-eZb" id="qdj-qN-y4G"/>
             </connections>
-            <point key="canvasLocation" x="560" y="376"/>
+            <point key="canvasLocation" x="470" y="197"/>
         </tableViewCell>
     </objects>
 </document>
